# finhash

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/finhash/: __init__.py  api.py  hasher.py  matrix.py  parallel.py
tests/: test_api.py  test_hasher.py  test_parallel.py
